[package]
name = "bevy_prototype_physics"
version = "0.1.0"
authors = ["Rose Peck <olaf223224@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "45b2db70705da24a89426e6b6e77d603a3983025",  default-features = false }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "45b2db70705da24a89426e6b6e77d603a3983025"}
float_eq = "0.5"